// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`при смене слайда для неподключенного сервиса отправит вас лог 1`] = `
Object {
  "category": "cars",
  "event": "VAS_SHOW",
  "from": "from-for-billing",
  "offerId": "1085562758-1970f439",
  "originalPrice": 1499,
  "price": 967,
  "serviceId": "show-in-stories",
}
`;

exports[`список сервисов если для объявления доступен вип, будет включать правильный набор сервисов в правильном порядке 1`] = `
Array [
  "package_vip",
  "package_turbo",
  "show-in-stories",
  "all_sale_toplist",
  "all_sale_special",
  "all_sale_color",
  "all_sale_fresh",
]
`;

exports[`список сервисов если для объявления не доступен вип, будет включать правильный набор сервисов в правильном порядке 1`] = `
Array [
  "package_turbo",
  "package_express",
  "show-in-stories",
  "all_sale_toplist",
  "all_sale_special",
  "all_sale_color",
  "all_sale_fresh",
]
`;
